# jetblack-messagebus-python3

./: .gitignore  README.md  mkdocs.yaml  mypy.ini  pyproject.toml
docs/: 404.html  index.html  sitemap.xml
docs/api/: index.html
docs/authentication/: index.html
docs/css/: custom.css
docs/getting-started/: index.html
docs/message-handlers/: index.html
docs/search/: search_index.json
docs/ssl/: index.html
documentation/: authentication.md  getting-started.md  index.md  message-handlers.md  ssl.md
documentation/api/: index.md
examples/: authenticated_authorizer.py  authenticated_notifier.py  authenticated_publisher.py  authenticated_subscriber.py  callback_notifier.py  callback_publisher.py  callback_subscriber.py  simple_subscriber.py  simple_subscriber2.py
jetblack_messagebus/: callback_client.py  client.py  messages.py  utils.py
jetblack_messagebus/authentication/: __init__.py  authenticator.py  basic_authenticator.py  connection_string_authenticator.py  null_authenticator.py  sspi_authenticator.py  token_authenticator.py  types.py
jetblack_messagebus/io/: data_packet.py  data_reader.py  data_writer.py
src/jetblack_messagebus/: __init__.py  callback_client.py  client.py  messages.py  utils.py
src/jetblack_messagebus/authentication/: __init__.py  basic_authenticator.py  null_authenticator.py  token_authenticator.py  types.py
src/jetblack_messagebus/io/: __init__.py  data_packet.py  data_reader.py  data_writer.py
tests/: mock_streams.py  test_messages.py  test_serialization.py
tests/authentication/: test_basic_authentication.py
