[tool.poetry]
name = "jetblack-messagebus-python3"
version = "4.0.0"
description = "A python3 client for jetblack-messagebus"
authors = ["Rob Blackbourn <rob.blackbourn@googlemail.com>"]
readme = "README.md"
repository = "https://github.com/rob-blackbourn/jetblack-messagebus-python3"
packages = [
    { include = "jetblack_messagebus", from = "src" },
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
aioconsole = "^0.1.15"
pytest = "^5.1"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
