[tool.poetry]
name = "jetblack-messagebus-python3"
version = "4.1.1"
description = "A python3 client for jetblack-messagebus"
authors = ["Rob Blackbourn <rob.blackbourn@googlemail.com>"]
readme = "README.md"
repository = "https://github.com/rob-blackbourn/jetblack-messagebus-python3"
packages = [
    { include = "jetblack_messagebus" },
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
aioconsole = "^0.1.15"
pytest = "^5.1"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8"
pylint = "^2.9.6"
mypy = "^0.910"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
